RESOLVED FIXED 53849
[Qt] Style widgets not rendering
https://bugs.webkit.org/show_bug.cgi?id=53849
Summary [Qt] Style widgets not rendering
Robert Hogan
Reported 2011-02-05 04:13:40 PST
[Qt] Style widgets not rendering
Attachments
Patch (2.66 KB, patch)
2011-02-05 04:16 PST, Robert Hogan
no flags
Robert Hogan
Comment 1 2011-02-05 04:16:08 PST
WebKit Commit Bot
Comment 2 2011-02-05 09:55:54 PST
Comment on attachment 81356 [details] Patch Clearing flags on attachment: 81356 Committed r77746: <http://trac.webkit.org/changeset/77746>
WebKit Commit Bot
Comment 3 2011-02-05 09:55:58 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4 2011-02-05 10:45:27 PST
The commit-queue encountered the following flaky tests while processing attachment 81356 [details]: http/tests/xmlhttprequest/cross-origin-no-authorization.html bug 33357 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.