2011-02-05  Robert Hogan  <robert@webkit.org>

Reviewed by Antonio Gomes.

        [Qt] Style widgets not rendering
        https://bugs.webkit.org/show_bug.cgi?id=53849

        * platform/qt/Skipped: Unskip plugins/application-plugins-plugins-disabled.html
2011-02-05  Robert Hogan  <robert@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] Style widgets not rendering
        https://bugs.webkit.org/show_bug.cgi?id=53849

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::hasValidClassId): x-qt-styled-widget is a valid class id too

Canonical link: https://commits.webkit.org/67811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77746 268f45cc-cd09-0410-ab3c-d52691b4dbfc